--- a/JURN/BMI-Calculator/bmi.html
+++ b/JURN/BMI-Calculator/bmi.html
@@ -7,7 +7,7 @@
 <h2>BMI-calculator</h2>
 <form action="bmi.php" method="post">
 
-Height in meters:<input type="number" name="height" placeholder="0,00" step="0.01" min="0.01" max="2.99"></br>
+Height in meters:<input type="number" name="height" placeholder="0,00" step="any" min="0.01" max="2.99"></br>
 Weight in kilograms: <input type="number" name="weight" placeholder="000,00" step="any" min="0.01" max="800.00"></br>
 <input type="submit" value="Calculate"><input type="reset" value="Reset">
 </form>
