--- a/JURN/Currency-Calculator/currency.html
+++ b/JURN/Currency-Calculator/currency.html
@@ -6,7 +6,7 @@
 <body> 
 <h2>currency calculator: dollars to euro</h2>
 <form action="calculate.php" method="POST"> 
-Dollars:<input type="number" name="Dollars"> <br/>
+Dollars:<input type="number" name="Dollars" step="any"> <br/>
 <input type="submit" value="Calculate"><input type="reset" value="Reset"> 
 </form>
 </body> 
