--- a/JURN/Distance-Converter/distance.html
+++ b/JURN/Distance-Converter/distance.html
@@ -10,8 +10,8 @@
 
       <form action="convert.php" method="POST">
       <input type="number" name="in"><br>
-      <input type="radio" name="distance" value="kilometers"> Kilometers<br>
-      <input type="radio" name="distance" value="miles"> Miles<br>
+      <input type="radio" name="distance" value="kilometers" required> Kilometers<br>
+      <input type="radio" name="distance" value="miles" required> Miles<br>
       <input type="submit" name="convert" value="convert">
       <input type="reset" name="reset" value="reset"><br>
       </form>
