--- a/Sander/PHP5/Recipes Casus/Versie 01/index.html
+++ b/Sander/PHP5/Recipes Casus/Versie 01/index.html
@@ -1,7 +1,7 @@
 <html>
 
 <head>
-	<title>Index</title>
+	<title>What's in my fridge?</title>
 	<link href="stylesheet.css" rel="stylesheet" type="text/css" />
 	<script type="text/javascript">
 	function DetectTheThing() {
@@ -21,14 +21,14 @@
 			<div class="headerButton headerLogin">Register</div>
 			<div class="headerButton headerOptions"><img src="images/options.png" height="44" /></div>
 		</div>
-		<div class="indexImage"><img src="images/logoBlack.png" style="height:50%; margin-top:8%;" /></div>
+		<div class="indexImage"><img src="images/logoBlack.png" style="height:40%; margin-top:10%;" /></div>
 		<br />
 		<div class="indexContainer">
 			<div class="menuContainer">
-				<div class="menuButton">Home</div>
-				<div class="menuButton">Ingredients</div>
+                <a href="recipes.html" class="menuButton">Home</a>
+                <a href="recipes.html" class="menuButton">Ingredients</a>
 				<a href="recipes.html" class="menuButton">Recipes</a>
-				<div class="menuButton">Button</div>
+                <a href="recipes.html" class="menuButton">Button</a>
 			</div>
 		</div>
 	</div>
