--- a/Sander/PHP5/Recipes Casus/Versie 01/recipes.html
+++ b/Sander/PHP5/Recipes Casus/Versie 01/recipes.html
@@ -10,6 +10,9 @@
 		<div class="headerContainer">
 			<div class="headerLogo"><img src="images/logoWhite.png" height="50" /></div>
 			<div class="headerFiller"></div>
+            <div>
+
+            </div>
 			<div class="headerButton headerLogin">Login</div>
 			<div class="headerButton headerLogin">Register</div>
 			<div class="headerButton headerOptions"><img src="images/options.png" height="44" /></div>
