--- a/Sander/PHP5/Recipes Casus/Versie 02/ingredients.html
+++ b/Sander/PHP5/Recipes Casus/Versie 02/ingredients.html
@@ -8,42 +8,32 @@
 <body>
 	<div class="page">
 		<div class="headerContainer">
-			<div class="headerLogo"><img src="images/logoWhite.png" height="50" /></div>
+			<div class="headerLogo"><a href="index.html" class="menuButton"><img src="images/logoWhite.png" height="50" /></a></div>
 			<div class="headerFiller"></div>
 			<div class="headerButton headerLogin">Login</div>
-			<div class="headerButton headerLogin">Register</div>
-			<div class="headerButton headerOptions"><img src="images/options.png" height="44" /></div>
+			<a href="register.html" class="headerButton headerLogin">Register</a>
+			<div class="headerButton headerOptions"></div>
 		</div>
 		<div><img src="images/headerImage.jpg" class="headerImage" /></div>
 		<br />
 		<div class="menuContainer">
 			<a href="index.html" class="menuButton">Home</a>
-			<div class="menuButton">Ingredients</div>
-			<div class="menuButton">Recipes</div>
-			<div class="menuButton">Button</div>
+			<a href="ingredients.html" class="menuButton">Ingredients</a>
+			<a href="recipes.html" class="menuButton">Recipes</a>
+			<a href="button.html" class="menuButton">Button</a>
 		</div>
 		<div class="content">
 			<div class="column left">
 				<table border="0" class="ingredients">
-					<tr>
-						<td class="header">Ingredients</td>
-					</tr>
-					<tr>
-						<td class="content">Tomato</td>
-					</tr>
-					<tr>
-						<td class="content">Banana</td>
-					</tr>
-					<tr>
-						<td class="content">Lettuce</td>
-					</tr>
-					<tr>
-						<td class="content">Hamburger</td>
-					</tr>
+					<tr><td class="header">Ingredients</td></tr>
+					<tr><td class="content">Tomato</td></tr>
+					<tr><td class="content">Banana</td></tr>
+					<tr><td class="content">Lettuce</td></tr>
+					<tr><td class="content">Hamburger</td></tr>
 				</table>
 			</div>
 			<div class="column center">
-				<h1>Bacon is delicious!</h1>
+				<h1 class="center">Bacon is delicious!</h1>
 				<p>
 					Bacon ipsum dolor amet turkey venison alcatra chuck ribeye corned beef, hamburger pork loin capicola jerky rump ball tip spare ribs bacon. Turducken bresaola filet mignon chuck sausage rump. Swine pork loin pork frankfurter meatball tenderloin beef burgdoggen tongue kielbasa jerky cupim. Brisket cow filet mignon pastrami. Turkey prosciutto andouille beef, brisket chicken biltong jowl swine.
 				</p>
