--- a/Sander/PHP5/Recipes Casus/Versie 02/recipes.html
+++ b/Sander/PHP5/Recipes Casus/Versie 02/recipes.html
@@ -1,29 +1,29 @@
 <html>
 
 <head>
-	<title>Recipes</title>
+	<title>Ingredients</title>
 	<link href="stylesheet.css" rel="stylesheet" type="text/css" />
 </head>
 
 <body>
 	<div class="page">
 		<div class="headerContainer">
-			<div class="headerLogo"><img src="images/logoWhite.png" height="50" /></div>
+			<div class="headerLogo"><a href="index.html" class="menuButton"><img src="images/logoWhite.png" height="50" /></a></div>
 			<div class="headerFiller"></div>
             <div>
 
             </div>
 			<div class="headerButton headerLogin">Login</div>
-			<div class="headerButton headerLogin">Register</div>
-			<div class="headerButton headerOptions"><img src="images/options.png" height="44" /></div>
+			<a href="register.html" class="headerButton headerLogin">Register</a>
+			<div class="headerButton headerOptions"></div>
 		</div>
 		<div><img src="images/headerImage.jpg" class="headerImage" /></div>
 		<br />
 		<div class="menuContainer">
 			<a href="index.html" class="menuButton">Home</a>
-			<div class="menuButton">Ingredients</div>
-			<div class="menuButton">Recipes</div>
-			<div class="menuButton">Button</div>
+			<a href="ingredients.html" class="menuButton">Ingredients</a>
+			<a href="recipes.html" class="menuButton">Recipes</a>
+			<a href="button.html" class="menuButton">Button</a>
 		</div>
 		<div class="content">
 			<div class="column left">
