--- a/Sander/PHP5/Recipes Casus/Versie 02/register.html
+++ b/Sander/PHP5/Recipes Casus/Versie 02/register.html
@@ -8,14 +8,14 @@
 <body>
 	<div class="page">
 		<div class="headerContainer">
-			<div class="headerLogo"><img src="images/logoWhite.png" height="50" /></div>
+			<div class="headerLogo"><a href="index.html" class="menuButton"><img src="images/logoWhite.png" height="50" /></a></div>
 			<div class="headerFiller"></div>
             <div>
 
             </div>
 			<div class="headerButton headerLogin">Login</div>
-			<div class="headerButton headerLogin">Register</div>
-			<div class="headerButton headerOptions"><img src="images/options.png" height="44" /></div>
+			<a href="register.html" class="headerButton headerLogin">Register</a>
+			<div class="headerButton headerOptions"></div>
 		</div>
 		<div><img src="images/headerImage.jpg" class="headerImage" /></div>
 		<br />
@@ -30,46 +30,49 @@
 
 			</div>
 			<div class="column center">
-				<table>
-					<tr>
-						<td>Username:</td>
-						<td><input type="text" name="username" placeholder="Username" class="registerInput" autofocus /> *</td>
-					</tr>
-					<tr>
-						<td>Email:</td>
-						<td><input type="text" name="username" placeholder="Email" class="registerInput" /> *</td>
-					</tr>
-					<tr>
-						<td>Password:</td>
-						<td><input type="text" name="username" placeholder="Password" class="registerInput" /> *</td>
-					</tr>
-					<tr>
-						<td>Repeat password:</td>
-						<td><input type="text" name="username" placeholder="Repeat password" class="registerInput" /> *</td>
-					</tr>
-					<tr>
-						<td colspan="2"><hr /></td>
-					</tr>
-					<tr>
-						<td>Full name:</td>
-						<td><input type="text" name="name" placeholder="Full name" class="registerInput" /></td>
-					</tr>
-					<tr>
-						<td>Tell us something<br />about your taste:</td>
-						<td><textarea cols="20" rows="5" placeholder="Tell us something about your taste." class="registerInput"></textarea></td>
-					</tr>
-					<tr>
-						<td>Recipes:</td>
-						<td><input type="text" name="recipes" placeholder="Recipes" class="registerInput" /></td>
-					</tr>
-					<tr>
-						<td colspan="2"><hr /></td>
-					</tr>
-					<tr>
-						<td></td>
-						<td><input type="submit" name="submit" value="Submit" class="registerSubmit" /></td>
-					</tr>
-				</table>
+				<form method="post" style="display:flex;justify-content:center;">
+					<table border="0">
+						<tr>
+							<td>Username:</td>
+							<td><input type="text" name="username" placeholder="Username" class="registerInput" required autofocus /> *</td>
+						</tr>
+						<tr>
+							<td>Email:</td>
+							<td><input type="text" name="email" placeholder="Email" class="registerInput" required /> *</td>
+						</tr>
+						<tr>
+							<td>Password:</td>
+							<td><input type="password" name="password" placeholder="Password" class="registerInput" required /> *</td>
+						</tr>
+						<tr>
+							<td>Repeat password:</td>
+							<td><input type="password" name="passwordRepeat" placeholder="Repeat password" class="registerInput" required /> *</td>
+						</tr>
+						<tr>
+							<td colspan="2"><hr /></td>
+						</tr>
+						<tr>
+							<td>Full name:</td>
+							<td><input type="text" name="name" placeholder="Full name" class="registerInput" /></td>
+						</tr>
+						<tr>
+							<td>Tell us something<br />about your taste:</td>
+							<td><textarea cols="20" rows="5" placeholder="Tell us something about your taste." class="registerInput"></textarea></td>
+						</tr>
+						<tr>
+							<td>Recipes:</td>
+							<td><input type="text" name="recipes" placeholder="Recipes" class="registerInput" /></td>
+						</tr>
+						<tr>
+							<td colspan="2"><hr /></td>
+						</tr>
+						<tr>
+							<td></td>
+							<td><input type="submit" name="submit" value="Submit" class="registerSubmit" /></td>
+						</tr>
+					</table>
+				</form>
+				<p style="float:right;">Fields marked with * are required.</p>
 			</div>
 			<div class="column right">
 
