--- a/Sander/PHP5/Recipes Casus/tests/test2.html
+++ b/Sander/PHP5/Recipes Casus/tests/test2.html
@@ -6,7 +6,7 @@
 </head>
 
 <body>
-	<div tabindex="0" class="onclick-menu">test
+	<div tabindex="0" class="onclick-menu">
 		<div class="onclick-menu-content">
 			<button onclick="alert('click 1')">Look, mom</button>
 			<button onclick="alert('click 2')">No JavaScript!</button>
